# aichallenge2023-sim

docker/aichallenge/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/launch/: autoware_mini_awsim.launch.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_launch/autoware_launch/config/control/trajectory_follower/lateral/: mpc.param.yaml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/path_subscriber/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/path_subscriber/src/: path_subscriber.cpp  path_subscriber.hpp  path_subscriber_impl.cpp
